Updated visibilty property to visible for safari flicker fix

--- a/_animate.scss
+++ b/_animate.scss
@@ -3,7 +3,7 @@
 $delay: 0s;
 $function: ease;
 $fill: both;
-$visibility: hidden;
+$visibility: visible;
 
 @import "properties";
 // @import "animations/bounce";
